[gd_scene load_steps=9 format=2]

[ext_resource path="res://Reel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites/UI/novo.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/UI/text3443-6.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/UI/novo2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/UI/placa.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/UI/bg.png" type="Texture" id=11]
[ext_resource path="res://Script/Game.gd" type="Script" id=12]
[ext_resource path="res://Script/linha.gd" type="Script" id=17]

[node name="Game" type="Node"]
script = ExtResource( 12 )

[node name="Reel" parent="." instance=ExtResource( 1 )]
z_index = -2

[node name="Reel2" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -128 )
z_index = -2
timeSpin = 2.0

[node name="Reel3" parent="." instance=ExtResource( 1 )]
position = Vector2( 192, -128 )
z_index = -2
timeSpin = 2.5

[node name="Linhas" type="Node" parent="."]

[node name="1" type="Node2D" parent="Linhas"]
script = ExtResource( 17 )
slots = [ NodePath("../../Reel/Real/2"), NodePath("../../Reel2/Real/2"), NodePath("../../Reel3/Real/2") ]
stopReelFinal = NodePath("../../Reel3")

[node name="2" type="Node2D" parent="Linhas"]
script = ExtResource( 17 )
slots = [ NodePath("../../Reel/Real/3"), NodePath("../../Reel2/Real/3"), NodePath("../../Reel3/Real/3") ]
stopReelFinal = NodePath("../../Reel3")

[node name="3" type="Node2D" parent="Linhas"]
position = Vector2( 0, 3 )
script = ExtResource( 17 )
slots = [ NodePath("../../Reel/Real/1"), NodePath("../../Reel2/Real/1"), NodePath("../../Reel3/Real/1") ]
stopReelFinal = NodePath("../../Reel3")

[node name="4" type="Node2D" parent="Linhas"]
script = ExtResource( 17 )
slots = [ NodePath("../../Reel/Real/1"), NodePath("../../Reel2/Real/2"), NodePath("../../Reel3/Real/3") ]
stopReelFinal = NodePath("../../Reel3")

[node name="5" type="Node2D" parent="Linhas"]
script = ExtResource( 17 )
slots = [ NodePath("../../Reel/Real/3"), NodePath("../../Reel2/Real/2"), NodePath("../../Reel3/Real/1") ]
stopReelFinal = NodePath("../../Reel3")

[node name="6" type="Node2D" parent="Linhas"]
script = ExtResource( 17 )
slots = [ NodePath("../../Reel/Real/1"), NodePath("../../Reel/Real/2"), NodePath("../../Reel/Real/3") ]
stopReelFinal = NodePath("../../Reel3")

[node name="7" type="Node2D" parent="Linhas"]
script = ExtResource( 17 )
slots = [ NodePath("../../Reel2/Real/1"), NodePath("../../Reel2/Real/2"), NodePath("../../Reel2/Real/3") ]
stopReelFinal = NodePath("../../Reel3")

[node name="8" type="Node2D" parent="Linhas"]
script = ExtResource( 17 )
slots = [ NodePath("../../Reel3/Real/1"), NodePath("../../Reel3/Real/2"), NodePath("../../Reel3/Real/3") ]
stopReelFinal = NodePath("../../Reel3")

[node name="view" type="Node2D" parent="."]

[node name="labels" type="Control" parent="view"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="point" type="Label" parent="view/labels"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -192.0
margin_top = 233.0
margin_right = -96.0
margin_bottom = 270.0
rect_scale = Vector2( 4, 4 )
size_flags_vertical = 6
custom_colors/font_color = Color( 0.0313726, 0.0313726, 0.0313726, 1 )
text = "1000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="porcentagem" type="Label" parent="view/labels"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -192.0
margin_top = -256.0
margin_right = -96.0
margin_bottom = -219.0
rect_scale = Vector2( 4, 4 )
size_flags_vertical = 6
custom_colors/font_color = Color( 0.0313726, 0.0313726, 0.0313726, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ganho" type="Label" parent="view/labels"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -385.335
margin_top = 230.71
margin_right = -289.335
margin_bottom = 261.71
rect_scale = Vector2( 4, 4 )
size_flags_vertical = 6
custom_colors/font_color = Color( 0.0313726, 0.0313726, 0.0313726, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bonus" type="Label" parent="view/labels"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 64.0
margin_top = 229.376
margin_right = 160.0
margin_bottom = 260.376
rect_scale = Vector2( 4, 4 )
size_flags_vertical = 6
custom_colors/font_color = Color( 0.0313726, 0.0313726, 0.0313726, 1 )
text = "0
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total" type="Label" parent="view/labels"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -384.0
margin_top = -256.0
margin_right = -288.0
margin_bottom = -225.0
rect_scale = Vector2( 4, 4 )
size_flags_vertical = 6
custom_colors/font_color = Color( 0.0313726, 0.0313726, 0.0313726, 1 )
text = "0
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total_ganho" type="Label" parent="view/labels"]
modulate = Color( 0, 0, 0, 1 )
margin_top = -256.0
margin_right = 96.0
margin_bottom = -225.0
rect_scale = Vector2( 4, 4 )
size_flags_vertical = 6
custom_colors/font_color = Color( 0.0313726, 0.0313726, 0.0313726, 1 )
text = "0
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="view/labels"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -63.0561
margin_top = 208.023
margin_right = 0.943878
margin_bottom = 267.023
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Crédito
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="view/labels"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -451.0
margin_top = 200.0
margin_right = -188.0
margin_bottom = 259.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Ganhou"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="view/labels"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 107.0
margin_top = 200.0
margin_right = 254.0
margin_bottom = 259.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Bônus"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="view/labels"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -464.349
margin_top = -289.886
margin_right = -201.349
margin_bottom = -230.886
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Créditos jogados"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="view/labels"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 94.0
margin_top = -290.0
margin_right = 197.0
margin_bottom = -231.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Pontos ganhos"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="view/labels"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -96.0363
margin_top = -285.366
margin_right = 6.96375
margin_bottom = -226.366
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "% pag."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="view ui" type="Node2D" parent="view"]
z_index = -1

[node name="Sprite" type="Sprite" parent="view/view ui"]
position = Vector2( -1.61908, 29.3589 )
scale = Vector2( 0.780533, 0.683527 )
texture = ExtResource( 2 )

[node name="Sprite5" type="Sprite" parent="view/view ui"]
position = Vector2( -2.11908, -5.11782 )
scale = Vector2( 0.796951, 0.692301 )
z_index = -2
texture = ExtResource( 4 )

[node name="Sprite6" type="Sprite" parent="view/view ui"]
position = Vector2( 4.04406, -407.601 )
scale = Vector2( 0.862242, 0.761245 )
z_index = -1
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="view/view ui"]
position = Vector2( -68.3476, -129.952 )
scale = Vector2( 1.88225, 0.702183 )
z_index = -3
texture = ExtResource( 11 )

[node name="Sprite3" type="Sprite" parent="view/view ui"]
modulate = Color( 0.694118, 0.878431, 0.423529, 1 )
position = Vector2( -65.2471, 536.644 )
scale = Vector2( 1.88225, 0.702183 )
z_index = -8
texture = ExtResource( 11 )

[node name="Sprite4" type="Sprite" parent="view/view ui"]
position = Vector2( -0.530194, -234.981 )
scale = Vector2( 1.31446, 1.57561 )
texture = ExtResource( 3 )

[node name="Sprite7" type="Sprite" parent="view/view ui"]
position = Vector2( -222.5, -17 )
rotation = -0.523598
scale = Vector2( 0.309138, 0.367239 )
texture = ExtResource( 5 )

[node name="camera" type="Camera2D" parent="."]
position = Vector2( 0, -25 )
current = true
zoom = Vector2( 0.9, 0.9 )
[connection signal="freeKeyStop" from="Reel" to="." method="_on_Reel_freeKeyStop"]
[connection signal="stop" from="Reel3" to="." method="_on_Reel3_stop"]
[connection signal="matchScore" from="Linhas/1" to="." method="_on_1_matchScore"]
